
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_short ;
typedef int u_int ;
typedef int u_char ;


 int ntohs (int const) ;
 int printf (char*,...) ;

void hexdump(unsigned char *bp, unsigned int length) {





  static const char asciify[] = "................................ !\"#$%&'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_`abcdefghijklmnopqrstuvwxyz{|}~.................................................................................................................................";


  register const u_short *sp;

  register const u_char *ap;

  register u_int i, j;

  register int nshorts, nshorts2;

  register int padding;


  printf("\n\t");

  padding = 0;

  sp = (u_short *)bp;

  ap = (u_char *)bp;

  nshorts = (u_int) length / sizeof(u_short);

  nshorts2 = (u_int) length / sizeof(u_short);

  i = 0;

  j = 0;

  while(1) {

    while (--nshorts >= 0) {

      printf(" %04x", ntohs(*sp));

      sp++;

      if ((++i % 8) == 0)

        break;

    }

    if (nshorts < 0) {

      if ((length & 1) && (((i-1) % 8) != 0)) {

        printf(" %02x  ", *(u_char *)sp);

        padding++;

      }

      nshorts = (8 - (nshorts2 - nshorts));

      while(--nshorts >= 0) {

        printf("     ");

      }

      if (!padding) printf("     ");

    }

    printf("  ");


    while (--nshorts2 >= 0) {

      printf("%c%c", asciify[*ap], asciify[*(ap+1)]);

      ap += 2;

      if ((++j % 8) == 0) {

        printf("\n\t");

        break;

      }

    }

    if (nshorts2 < 0) {

      if ((length & 1) && (((j-1) % 8) != 0)) {

        printf("%c", asciify[*ap]);

      }

      break;

    }

  }

  if ((length & 1) && (((i-1) % 8) == 0)) {

    printf(" %02x", *(u_char *)sp);

    printf("                                       %c", asciify[*ap]);

  }

  printf("\n");

}
